# Cotton

./: .gitignore  CMakeLists.txt  README.md
include/: cotton.h  ctgl.h  ctmath.h
rez/: fragment.glsl  vertex.glsl
src/: cotton.c  ctgl.c  ctmath.c  main.c
